--- a/lambda_db/serverless.yml
+++ b/lambda_db/serverless.yml
@@ -11,7 +11,7 @@ iamRoleStatementsName: lambda-db-testing-role
 functions:
   spatial_query:
     handler: handler.spatial_query
-    memory: 3008
+    memorySize: 3008
     layers:
       - <layer arn>
 
